<resources>
    <string name="app_name">Choreo Music Helper</string>
    <string name="app_description">Choreo Music Helper</string>
    <string name="contact_group">Contact</string>
    <string name="action_share">Share…</string>
    <string name="action_open">Open</string>
    <string name="action_reload">Reload</string>
    <string name="settings">Settings</string>
    <string name="action_about">About</string>
    <string name="songs">Songs</string>
    <string name="tracks">Tracks</string>
    <string name="track_edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="prepost_title">Preparation time</string>
    <string name="prepost_prelabel">Lead-in time</string>
    <string name="prepost_postlabel">Lead-out time</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="playback_channel_name">Choreo Music</string>
    <string name="exit_title">Exit</string>
    <string name="exit_description">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_save">Save as…</string>
    <string name="edit_track">Edit track</string>
    <string name="about_description">The Choreo Music Helper is intended to support anybody who wants to perform to a specific music. It cuts a song into smaller tracks to train specific parts at different speeds.</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="licenses">Licenses</string>
    <string name="speed_title">Speed</string>
    <string name="edittrack_note_end_time">Note: the end time is the beginning of the next track and can only be configured at the next track.</string>
    <string name="warn_track_exists_message">There already exists a track at position %1$02d:%2$02d:\n%3$s</string>
    <string name="introduction">Introduction</string>
    <string name="intro_preptime">If you are training to the song, you probably need some time between each iteration to go back to your starting position. You can add some time before and after the loop to do so. Additionally, the lead-in time also applies if you start a track.</string>
    <string name="intro_loop">Create a loop by selecting the start (A) and the end track (B). As long as there are A and B selected, the loop is active. A and B may be selected on the same track.</string>
    <string name="intro_split">Split a song with this button at the current position into smaller tracks. A track has always only a start, the end is defined by the next track.</string>
    <string name="intro_loop_title">Loop</string>
    <string name="intro_split_title">Welcome!</string>
    <string name="intro_preptime_title">Preparation time</string>
    <string name="intro_edit">By long pressing on a track you can edit the name and starting position of a track or delete it.</string>
    <string name="intro_edit_title">Edit track</string>
    <string name="action_onboarding">Introduction</string>
    <string name="warn_track_exists_title">Track already exists</string>
    <string name="pref_leadin_track_switch_title">Preparation time for track switch</string>
    <string name="pref_leadin_track_switch_summary">The lead-in time will also be used when switching to another track through direct select or next/previous buttons</string>
    <string name="waveview_calculating">Calculating…</string>
    <string name="pref_detailed_waveform_switch_title">Seekbar detailed</string>
    <string name="pref_detailed_waveform_switch_summary">The seekbar volume waves should be presented with as much details as possible</string>
    <string name="warn_save_not_supported_title">Save not supported</string>
    <string name="warn_save_not_supported_message">Save with chapters is not supported for this file type!</string>
    <string name="main_area_description">Track selection</string>
    <string name="speed_slider_description">Track speed</string>
    <string name="loop_description">Loop</string>
    <string name="add_track_description">Add track</string>
    <string name="speed_description">Speed</string>
    <string name="previous_description">Previous track</string>
    <string name="stop_description">Stop</string>
    <string name="playpause_description">Play</string>
    <string name="next_description">Next track</string>
    <string name="prepostPrePlus_description">Increase lead in time</string>
    <string name="prepostPreMinus_description">Decrease lead in time</string>
    <string name="prepostPostMinus_description">Decrease lead out time</string>
    <string name="prepostPostPlus_description">Increase lead out time</string>
    <string name="prepostPreTime_description">Lead in time</string>
    <string name="prepostPostTime_description">Lead out time</string>
    <string name="warn_track_deleted_title">Track not opened</string>
    <string name="warn_track_deleted_message">Track {0} was deleted/could not be opened and is deleted from the list.</string>
    <string name="edit_track_color_dialog">Track color</string>
    <string name="add_lead_in_time">Adding %ds lead in time</string>
    <string name="notification_nothing_loaded">Nothing loaded</string>
    <string name="done">Done</string>
    <string name="skip">Skip</string>
</resources>