<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prepost_prelabel" />

                <EditText
                    android:id="@+id/prepostPreTime"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/prepostPreTime_description"
                    android:digits="0123456789"
                    android:ems="2"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="10"
                    android:textAlignment="viewEnd"
                    tools:ignore="HardcodedText,LabelFor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="s"
                    tools:ignore="HardcodedText" />

                <Space
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/prepostPreMinus"
                    style="@style/BorderedButton"
                    android:contentDescription="@string/prepostPreMinus_description"
                    android:text="-"
                    android:textSize="24sp"
                    tools:ignore="HardcodedText" />

                <Space
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/prepostPrePlus"
                    style="@style/BorderedButton"
                    android:contentDescription="@string/prepostPrePlus_description"
                    android:text="+"
                    android:textSize="24sp"
                    tools:ignore="HardcodedText" />

            </TableRow>

            <TableRow>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_span="7">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/ic_baseline_volume_down_24"
                        app:tint="?colorPrimary" />

                    <androidx.appcompat.widget.AppCompatSeekBar
                        android:id="@+id/preVolume"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="100"
                        android:min="0"
                        android:progress="100" />

                    <TextView
                        android:id="@+id/preVolumeText"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:text="100%"
                        tools:ignore="HardcodedText" />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prepost_postlabel" />

                <EditText
                    android:id="@+id/prepostPostTime"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/prepostPostTime_description"
                    android:digits="0123456789"
                    android:ems="2"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="10"
                    android:textAlignment="viewEnd"
                    tools:ignore="HardcodedText,LabelFor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="s"
                    tools:ignore="HardcodedText" />

                <Space
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/prepostPostMinus"
                    style="@style/BorderedButton"
                    android:contentDescription="@string/prepostPostMinus_description"
                    android:text="-"
                    android:textSize="24sp"
                    tools:ignore="HardcodedText" />

                <Space
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/prepostPostPlus"
                    style="@style/BorderedButton"
                    android:contentDescription="@string/prepostPostPlus_description"
                    android:text="+"
                    android:textSize="24sp"
                    tools:ignore="HardcodedText" />


            </TableRow>

            <TableRow>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_span="7">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/ic_baseline_volume_down_24"
                        app:tint="?colorPrimary" />

                    <androidx.appcompat.widget.AppCompatSeekBar
                        android:id="@+id/postVolume"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="100"
                        android:min="0"
                        android:progress="100" />

                    <TextView
                        android:id="@+id/postVolumeText"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:text="100%"
                        tools:ignore="HardcodedText" />

                </LinearLayout>
            </TableRow>
        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>