<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Other views -->

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/main_area"
            android:contentDescription="@string/main_area_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Target view below -->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/loop"
                        android:contentDescription="@string/loop_description"
                        style="@style/MainButton"
                        app:icon="@drawable/baseline_more_time_24" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/add_track"
                        android:contentDescription="@string/add_track_description"
                        style="@style/MainButton"
                        app:icon="@drawable/baseline_playlist_add_24" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <FrameLayout
                        style="@style/MainButton"
                        android:contentDescription="@string/speed_description"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_margin="0dp"
                        android:padding="0dp">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/speed"
                            style="@style/MainButton"
                            android:layout_gravity="center"
                            app:icon="@drawable/baseline_speed_24" />

                        <TextView
                            android:id="@+id/speedText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center|bottom"
                            android:text=""/>
                    </FrameLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="15dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0" />

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1">

                        <com.masoudss.lib.WaveformSeekBar
                            android:id="@+id/waveformSeekBar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:wave_background_color="@color/primary"
                            app:wave_visible_progress="120000"
                            app:wave_corner_radius="0dp"
                            app:wave_gap="0dp"
                            app:wave_gravity="center"
                            app:wave_min_height="2dp"
                            app:wave_progress="0"
                            app:wave_progress_color="@color/secondary"
                            app:wave_width="1px" />

                        <TextView
                            android:id="@+id/waveformCalcText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text=""/>
                    </FrameLayout>

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0"
                        android:text="00:00"
                        android:textSize="18sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="64dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/previous"
                        android:contentDescription="@string/previous_description"
                        style="@style/MainButton"
                        app:icon="@drawable/baseline_skip_previous_24" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/stop"
                        android:contentDescription="@string/stop_description"
                        style="@style/MainButton"
                        app:icon="@drawable/baseline_stop_24" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/playpause"
                        android:contentDescription="@string/playpause_description"
                        style="@style/PlayButton" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/next"
                        android:contentDescription="@string/next_description"
                        style="@style/MainButton"
                        app:icon="@drawable/baseline_skip_next_24" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>
            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>